--- a/style.css
+++ b/style.css
@@ -698,7 +698,7 @@ p {
   text-transform: uppercase;
   padding: 12px 28px 12px 28px;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 .social {
@@ -712,8 +712,8 @@ h2 {
 }
 
 .title-contact {
-  color: white;
-  background-color: #f3976c;
+  color: #f3976c;
+  background-color: lightgray;
 }
 .citation {
   font-style: italic;
@@ -795,7 +795,7 @@ h4 {
 
 .btn-atomic-tangerine {
   background: #f3976c;
-  color: #ffffff !important;
+  color: #333333 !important;
 }
 
 .btn-atomic-tangerine:hover {
