Suite des corrections

--- a/style.css
+++ b/style.css
@@ -712,8 +712,8 @@ h2 {
 }
 
 .title-contact {
-  color: #f3976c;
-  background-color: lightgray;
+  color: #333333;
+  background-color: #f3976c;
 }
 
 .title-footer {
