--- a/style.css
+++ b/style.css
@@ -717,11 +717,16 @@ h2 {
 }
 
 .title-footer {
+  color: #333333;
   font-weight: bold;
+}
+
+.sub-title-2 {
+  font-size: 22px;
 }
 .citation {
   font-style: italic;
-  font-size: 24px;
+  font-size: 22px;
 }
 
 .citation-auteur {
