--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ a:hover {
 }
 
 .bloc {
-  width: 100%;
   clear: both;
   background: 50% 50% no-repeat;
   padding: 0 50px;
@@ -317,15 +316,25 @@ a:hover {
 
 .navbar .nav {
   padding-top: 2px;
-  margin-right: -16px;
   float: right;
-  z-index: 1;
 }
 
 .nav > li {
   float: left;
   margin-top: 4px;
   font-size: 16px;
+}
+
+ul {
+  list-style: none;
+}
+
+ul a {
+  text-decoration: none;
+}
+
+.li-contact {
+  margin-right: 30px;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -360,47 +369,6 @@ a:hover {
   float: right;
   position: relative;
   z-index: 2;
-}
-
-@media (min-width: 768px) {
-  .site-navigation {
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translate(0, -50%);
-    -webkit-transform: translateY(-50%);
-  }
-  .nav > li .dropdown-menu a,
-  .nav > li .dropdown-menu a:hover {
-    color: #484848;
-  }
-  .nav-invert .site-navigation {
-    left: 0;
-    right: 0;
-  }
-  .nav-center {
-    text-align: center;
-  }
-  .nav-center .navbar-header {
-    width: 100%;
-  }
-  .nav-center .navbar-header,
-  .nav-center .navbar-brand,
-  .nav-center .nav > li {
-    float: none;
-    display: inline-block;
-  }
-  .nav-center .site-navigation {
-    position: relative;
-    width: 100%;
-    right: 0;
-    margin-right: 0px;
-    margin-top: 20px;
-  }
-  .nav-center.mini-nav .navbar-toggle {
-    float: none;
-    margin: 10px auto 0;
-  }
 }
 
 .nav > li > .dropdown a {
